# MCMF

./: .gitignore  CMakeLists.txt
include/: mcmf.h
lib/: libglpk.40.dylib  libglpk_java.dylib
src/: CMakeLists.txt  mcmf.cpp
test/: CMakeLists.txt  test.cpp
